--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,272 @@
+.container {
+  padding: 0 6%;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+}
+
+/* Navbar */
+
+.app-header {
+  z-index: 5;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  background: #ffffff;
+  height: 80px;
+  box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.05),
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+.dialog-title {
+  color: #111827;
+  font-family: Inter;
+  font-size: 30px !important;
+  font-style: normal;
+  font-weight: 600 !important;
+  line-height: 36px !important;
+}
+.cart {
+  cursor: pointer;
+}
+.count {
+  color: #000000;
+  font-family: Inter;
+  font-size: 24px !important;
+  font-style: normal;
+  font-weight: 400 !important;
+  line-height: 32px !important;
+  width: 40px !important;
+  text-align: center;
+}
+.divider {
+  color: #111827 !important;
+  height: 2px !important;
+  width: 100%;
+  margin: 8px 0px !important;
+}
+.cart-title {
+  color: #111827;
+  font-family: Inter;
+  font-size: 20px !important;
+  font-style: normal;
+  font-weight: 700 !important;
+  line-height: 28px !important;
+}
+.car-price {
+  color: #111827;
+  font-family: Inter;
+  font-size: 20px !important;
+  font-style: normal;
+  font-weight: 400 !important;
+  line-height: 28px !important;
+}
+.cart-item-title {
+  color: #111827;
+  font-family: Inter;
+  font-size: 20px !important;
+  font-style: normal;
+  font-weight: 700 !important;
+  line-height: 28px !important;
+}
+.cart-item-description {
+  color: #111827;
+  font-family: Inter;
+  font-size: 14px !important;
+  font-style: normal;
+  font-weight: 500 !important;
+  line-height: 20px !important;
+}
+.grid-cart {
+  height: 320px;
+  overflow-y: auto;
+}
+.empty {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #111827;
+  font-family: Inter;
+  font-size: 16px !important;
+  font-style: normal;
+  font-weight: 500 !important;
+  line-height: 20px !important;
+}
+.div-badge {
+  position: relative;
+  display: inline-flex;
+  vertical-align: middle;
+  flex-shrink: 0;
+}
+.discount .MuiOutlinedInput-input {
+  border-radius: 4px;
+  border: 1px solid #d1d5db;
+  background: #ffffff;
+  display: flex;
+  padding: 12px 12.08px !important;
+  justify-content: center;
+  align-items: center;
+}
+.badge {
+  display: flex;
+  flex-flow: wrap;
+  -webkit-box-pack: center;
+  place-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  position: absolute;
+  box-sizing: border-box;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 0.75rem;
+  min-width: 12px;
+  line-height: 1;
+  padding: 0px 6px;
+  height: 12px;
+  border-radius: 10px;
+  z-index: 1;
+  transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  background-color: #ef4444;
+  color: rgb(255, 255, 255);
+  top: 14%;
+  right: 25%;
+  transform: scale(1) translate(50%, -50%);
+  transform-origin: 100% 0%;
+}
+/* Footer */
+
 .app-footer {
+  z-index: 5;
   position: fixed;
   bottom: 0px;
   left: 0px;
   right: 0px;
-  background: #0073fa;
+  background: #111827;
   color: #fff;
-  text-align: center;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 31px 6%;
   font-size: 18px;
   font-weight: 600;
 }
 
-.app-header {
-  background: #0073fa;
-  color: #fff;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  padding-left: 40px;
-}
-.app-header img {
-  height: 50px;
-}
-.app-header span {
-  font-size: 30px;
+.footer-company-name {
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
   font-weight: 600;
+  line-height: 24px;
+}
+
+.footer-company-address {
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+.footer-year {
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+/* section */
+
+.section-top-title {
+  font-family: Inter;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 36px;
+}
+.sort-icon {
+  height: 20px;
+  margin-right: 6px;
+}
+.input .MuiOutlinedInput-input {
+  border-radius: 4px;
+  background: #ffffff;
+  display: flex;
+  width: 302px !important;
+  padding: 10px 12px !important;
+  align-items: center;
+}
+
+.card-list {
+  min-height: 100vh;
+  margin-bottom: 90px;
+  background-color: #f3f4f6;
+}
+
+.card {
+  border-radius: 16px !important;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.06),
+    0px 4px 6px -1px rgba(0, 0, 0, 0.1) !important;
+}
+.card-title {
+  color: #000;
+  font-family: Inter;
+  font-size: 20px !important;
+  font-style: normal;
+  font-weight: 700 !important;
+  line-height: 28px !important;
+}
+.card-description {
+  color: #000;
+  font-family: Inter;
+  font-size: 14px !important;
+  font-style: normal;
+  font-weight: 500 !important;
+  line-height: 20px !important;
+}
+.button {
+  color: #ffffff !important;
+  border-radius: 8px !important;
+  text-transform: none !important;
+  width: 100%;
+  height: 56px;
+  font-family: Inter;
+  font-size: 16px !important;
+  font-style: normal;
+  font-weight: 500 !important;
+  line-height: 24px;
+  background-color: #3b82f6 !important;
+}
+.button-disable {
+  border-radius: 8px !important;
+  color: #ffffff !important;
+  text-transform: none !important;
+  width: 100%;
+  height: 56px;
+  font-family: Inter;
+  font-size: 16px !important;
+  font-style: normal;
+  font-weight: 500 !important;
+  line-height: 24px;
+  background-color: #93c5fd !important;
+}
+
+@media screen and (max-width: 390px) {
+  .card-list {
+    padding-bottom: 140px;
+  }
+  .input .MuiFormControl-root,
+  .input .MuiTextField-root,
+  .input .MuiOutlinedInput-root {
+    width: 100% !important;
+  }
+}
+@media screen and (max-width: 820px) {
+  .section-top-title {
+    margin-bottom: 16px;
+  }
+  .card-list {
+    padding-bottom: 60px;
+  }
 }
